Fixing events not wrapping.

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -93,6 +93,7 @@
 
 .cols2-flex > * {
     display: inline-block;
+    max-width: 350px;
 }
 
 @media screen and (max-width: 600px) {
